force-app/main/default/objects/Program_Reporting_Contact__c/Program_Reporting_Contact__c.object-meta.xml
<CustomObject>
    <description>Tracks program reporting contact related to the Deliverable__c</description>
    <label>Program Reporting Contact</label>
    <nameField>
        <displayFormat>RDR - {0000}</displayFormat>
        <label>Program Reporting Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Report Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>