force-app/main/default/objects/Program_Reporting_Contact__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Heller created 2021</description>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program</valueSetName>
    </valueSet>
</CustomField>