force-app/main/default/objects/Program_Reporting_Contact__c/fields/Types__c.field-meta.xml
<CustomField>
    <fullName>Types__c</fullName>
    <description>Heller created 2021</description>
    <label>Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Liaison for Development</fullName>
            </value>
            <value>
                <fullName>Project Lead</fullName>
            </value>
            <value>
                <fullName>Budget Contact</fullName>
            </value>
            <value>
                <fullName>Budget Approver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>